src/main/java/anonymous/code/antlr/minizinc/MiniZincParser.java
// Generated from MiniZinc.g4 by ANTLR 4.13.2
package anonymous.code.antlr.minizinc;

import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape" })
public class MiniZincParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
		T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
		T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
		T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
		T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
		T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
		T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
		T__52 = 53, T__53 = 54, T__54 = 55, T__55 = 56, T__56 = 57, T__57 = 58, T__58 = 59,
		T__59 = 60, T__60 = 61, T__61 = 62, T__62 = 63, T__63 = 64, T__64 = 65, T__65 = 66,
		T__66 = 67, T__67 = 68, T__68 = 69, T__69 = 70, T__70 = 71, T__71 = 72, T__72 = 73,
		T__73 = 74, T__74 = 75, T__75 = 76, T__76 = 77, SEMI = 78, EQ = 79, INT_LITERAL = 80,
		FLOAT_LITERAL = 81, DOLLAR_IDENT = 82, IDENT = 83, STRING_LITERAL = 84, COMMENT = 85,
		WS = 86;
	public static final int RULE_model = 0, RULE_item = 1, RULE_includeItem = 2, RULE_varDeclItem = 3,
		RULE_enumItem = 4, RULE_typeInstSynItem = 5, RULE_assignItem = 6, RULE_constraintItem = 7,
		RULE_solveItem = 8, RULE_outputItem = 9, RULE_annotationItem = 10, RULE_predicateItem = 11,
		RULE_testItem = 12, RULE_functionItem = 13, RULE_enumCasesList = 14, RULE_enumCases = 15,
		RULE_operationItemTail = 16, RULE_params = 17, RULE_tiExprAndId = 18,
		RULE_tiExpr = 19, RULE_baseTiExpr = 20, RULE_baseTiExprTail = 21, RULE_baseType = 22,
		RULE_arrayTiExpr = 23, RULE_arrayAccessTail = 24, RULE_fieldAccessTail = 25,
		RULE_annotations = 26, RULE_annotation = 27, RULE_exprAtomHead = 28, RULE_annLiteral = 29,
		RULE_exprAtomTail = 30, RULE_expr = 31, RULE_iffExpr = 32, RULE_implExpr = 33,
		RULE_orExpr = 34, RULE_xorExpr = 35, RULE_andExpr = 36, RULE_compareExpr = 37,
		RULE_setExpr = 38, RULE_rangeExpr = 39, RULE_addExpr = 40, RULE_multExpr = 41,
		RULE_powExpr = 42, RULE_unaryExpr = 43, RULE_primary = 44, RULE_postfix = 45,
		RULE_quantifierExpr = 46, RULE_callSuffix = 47, RULE_literal = 48, RULE_setLiteral = 49,
		RULE_arrayLiteral = 50, RULE_arrayLiteral2d = 51, RULE_arrayRow = 52,
		RULE_tupleLiteral = 53, RULE_recordLiteral = 54, RULE_ifThenElseExpr = 55,
		RULE_letExpr = 56, RULE_letItem = 57, RULE_generatorList = 58, RULE_generator = 59,
		RULE_indexedArrayLiteral = 60, RULE_indexedArrayLiteral2d = 61, RULE_indexedArrayRow = 62,
		RULE_indexTuple = 63, RULE_arrayComp = 64, RULE_indexedArrayComp = 65,
		RULE_callExpr = 66, RULE_genCallExpr = 67, RULE_ident = 68;

	private static String[] makeRuleNames() {
		return new String[] {
				"model", "item", "includeItem", "varDeclItem", "enumItem", "typeInstSynItem",
				"assignItem", "constraintItem", "solveItem", "outputItem", "annotationItem",
				"predicateItem", "testItem", "functionItem", "enumCasesList", "enumCases",
				"operationItemTail", "params", "tiExprAndId", "tiExpr", "baseTiExpr",
				"baseTiExprTail", "baseType", "arrayTiExpr", "arrayAccessTail", "fieldAccessTail",
				"annotations", "annotation", "exprAtomHead", "annLiteral", "exprAtomTail",
				"expr", "iffExpr", "implExpr", "orExpr", "xorExpr", "andExpr", "compareExpr",
				"setExpr", "rangeExpr", "addExpr", "multExpr", "powExpr", "unaryExpr",
				"primary", "postfix", "quantifierExpr", "callSuffix", "literal", "setLiteral",
				"arrayLiteral", "arrayLiteral2d", "arrayRow", "tupleLiteral", "recordLiteral",
				"ifThenElseExpr", "letExpr", "letItem", "generatorList", "generator",
				"indexedArrayLiteral", "indexedArrayLiteral2d", "indexedArrayRow", "indexTuple",
				"arrayComp", "indexedArrayComp", "callExpr", "genCallExpr", "ident"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
				null, "'include'", "'any'", "':'", "'enum'", "'type'", "'constraint'",
				"'solve'", "'satisfy'", "'minimize'", "'maximize'", "'output'", "'::'",
				"'annotation'", "'predicate'", "'test'", "'function'", "'++'", "'{'",
				"','", "'}'", "'_'", "'('", "')'", "'anon_enum'", "'var'", "'par'", "'opt'",
				"'set of'", "'ann'", "'bool'", "'int'", "'float'", "'string'", "'array'",
				"'['", "']'", "'of'", "'list'", "'.'", "'true'", "'false'", "'<->'",
				"'->'", "'\\/'", "'xor'", "'/\\'", "'<'", "'>'", "'<='", "'>='", "'!='",
				"'in'", "'subset'", "'superset'", "'union'", "'diff'", "'symdiff'", "'intersect'",
				"'..'", "'+'", "'-'", "'*'", "'/'", "'div'", "'mod'", "'^'", "'not'",
				"'|'", "'[|'", "'|]'", "'if'", "'then'", "'elseif'", "'else'", "'endif'",
				"'let'", "'where'", "';'"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[] {
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, "SEMI", "EQ", "INT_LITERAL", "FLOAT_LITERAL",
				"DOLLAR_IDENT", "IDENT", "STRING_LITERAL", "COMMENT", "WS"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "MiniZinc.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public MiniZincParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModelContext extends ParserRuleContext {
		public TerminalNode EOF() {
			return getToken(MiniZincParser.EOF, 0);
		}

		public List<ItemContext> item() {
			return getRuleContexts(ItemContext.class);
		}

		public ItemContext item(int i) {
			return getRuleContext(ItemContext.class, i);
		}

		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_model;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).enterModel(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).exitModel(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MiniZincVisitor)
				return ((MiniZincVisitor<? extends T>) visitor).visitModel(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3458768155923835126L) != 0)
					|| ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 254485L) != 0)) {
					{
						{
							setState(138);
							item();
						}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(144);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ItemContext extends ParserRuleContext {
		public IncludeItemContext includeItem() {
			return getRuleContext(IncludeItemContext.class, 0);
		}

		public TerminalNode SEMI() {
			return getToken(MiniZincParser.SEMI, 0);
		}

		public VarDeclItemContext varDeclItem() {
			return getRuleContext(VarDeclItemContext.class, 0);
		}

		public EnumItemContext enumItem() {
			return getRuleContext(EnumItemContext.class, 0);
		}

		public TypeInstSynItemContext typeInstSynItem() {
			return getRuleContext(TypeInstSynItemContext.class, 0);
		}

		public AssignItemContext assignItem() {
			return getRuleContext(AssignItemContext.class, 0);
		}

		public ConstraintItemContext constraintItem() {
			return getRuleContext(ConstraintItemContext.class, 0);
		}

		public SolveItemContext solveItem() {
			return getRuleContext(SolveItemContext.class, 0);
		}

		public OutputItemContext outputItem() {
			return getRuleContext(OutputItemContext.class, 0);
		}

		public PredicateItemContext predicateItem() {
			return getRuleContext(PredicateItemContext.class, 0);
		}

		public TestItemContext testItem() {
			return getRuleContext(TestItemContext.class, 0);
		}

		public FunctionItemContext functionItem() {
			return getRuleContext(FunctionItemContext.class, 0);
		}

		public AnnotationItemContext annotationItem() {
			return getRuleContext(AnnotationItemContext.class, 0);
		}

		public ItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_item;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).enterItem(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).exitItem(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MiniZincVisitor)
				return ((MiniZincVisitor<? extends T>) visitor).visitItem(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ItemContext item() throws RecognitionException {
		ItemContext _localctx = new ItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_item);
		try {
			setState(182);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1); {
				setState(146);
				includeItem();
				setState(147);
				match(SEMI);
			}
				break;
			case 2:
				enterOuterAlt(_localctx, 2); {
				setState(149);
				varDeclItem();
				setState(150);
				match(SEMI);
			}
				break;
			case 3:
				enterOuterAlt(_localctx, 3); {
				setState(152);
				enumItem();
				setState(153);
				match(SEMI);
			}
				break;
			case 4:
				enterOuterAlt(_localctx, 4); {
				setState(155);
				typeInstSynItem();
				setState(156);
				match(SEMI);
			}
				break;
			case 5:
				enterOuterAlt(_localctx, 5); {
				setState(158);
				assignItem();
				setState(159);
				match(SEMI);
			}
				break;
			case 6:
				enterOuterAlt(_localctx, 6); {
				setState(161);
				constraintItem();
				setState(162);
				match(SEMI);
			}
				break;
			case 7:
				enterOuterAlt(_localctx, 7); {
				setState(164);
				solveItem();
				setState(165);
				match(SEMI);
			}
				break;
			case 8:
				enterOuterAlt(_localctx, 8); {
				setState(167);
				outputItem();
				setState(168);
				match(SEMI);
			}
				break;
			case 9:
				enterOuterAlt(_localctx, 9); {
				setState(170);
				predicateItem();
				setState(171);
				match(SEMI);
			}
				break;
			case 10:
				enterOuterAlt(_localctx, 10); {
				setState(173);
				testItem();
				setState(174);
				match(SEMI);
			}
				break;
			case 11:
				enterOuterAlt(_localctx, 11); {
				setState(176);
				functionItem();
				setState(177);
				match(SEMI);
			}
				break;
			case 12:
				enterOuterAlt(_localctx, 12); {
				setState(179);
				annotationItem();
				setState(180);
				match(SEMI);
			}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IncludeItemContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() {
			return getToken(MiniZincParser.STRING_LITERAL, 0);
		}

		public IncludeItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_includeItem;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).enterIncludeItem(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).exitIncludeItem(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MiniZincVisitor)
				return ((MiniZincVisitor<? extends T>) visitor).visitIncludeItem(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final IncludeItemContext includeItem() throws RecognitionException {
		IncludeItemContext _localctx = new IncludeItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_includeItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(184);
				match(T__0);
				setState(185);
				match(STRING_LITERAL);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclItemContext extends ParserRuleContext {
		public TiExprAndIdContext tiExprAndId() {
			return getRuleContext(TiExprAndIdContext.class, 0);
		}

		public AnnotationsContext annotations() {
			return getRuleContext(AnnotationsContext.class, 0);
		}

		public TerminalNode EQ() {
			return getToken(MiniZincParser.EQ, 0);
		}

		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}

		public IdentContext ident() {
			return getRuleContext(IdentContext.class, 0);
		}

		public VarDeclItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_varDeclItem;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).enterVarDeclItem(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).exitVarDeclItem(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MiniZincVisitor)
				return ((MiniZincVisitor<? extends T>) visitor).visitVarDeclItem(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final VarDeclItemContext varDeclItem() throws RecognitionException {
		VarDeclItemContext _localctx = new VarDeclItemContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclItem);
		int _la;
		try {
			setState(201);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1); {
				setState(187);
				tiExprAndId();
				setState(188);
				annotations();
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == EQ) {
					{
						setState(189);
						match(EQ);
						setState(190);
						expr();
					}
				}

			}
				break;
			case 2:
				enterOuterAlt(_localctx, 2); {
				setState(193);
				match(T__1);
				setState(194);
				match(T__2);
				setState(195);
				ident();
				setState(196);
				annotations();
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == EQ) {
					{
						setState(197);
						match(EQ);
						setState(198);
						expr();
					}
				}

			}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnumItemContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class, 0);
		}

		public AnnotationsContext annotations() {
			return getRuleContext(AnnotationsContext.class, 0);
		}

		public TerminalNode EQ() {
			return getToken(MiniZincParser.EQ, 0);
		}

		public EnumCasesListContext enumCasesList() {
			return getRuleContext(EnumCasesListContext.class, 0);
		}

		public EnumItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_enumItem;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).enterEnumItem(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).exitEnumItem(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MiniZincVisitor)
				return ((MiniZincVisitor<? extends T>) visitor).visitEnumItem(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final EnumItemContext enumItem() throws RecognitionException {
		EnumItemContext _localctx = new EnumItemContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_enumItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(203);
				match(T__3);
				setState(204);
				ident();
				setState(205);
				annotations();
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == EQ) {
					{
						setState(206);
						match(EQ);
						setState(207);
						enumCasesList();
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeInstSynItemContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class, 0);
		}

		public AnnotationsContext annotations() {
			return getRuleContext(AnnotationsContext.class, 0);
		}

		public TerminalNode EQ() {
			return getToken(MiniZincParser.EQ, 0);
		}

		public TiExprContext tiExpr() {
			return getRuleContext(TiExprContext.class, 0);
		}

		public TypeInstSynItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_typeInstSynItem;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).enterTypeInstSynItem(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).exitTypeInstSynItem(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MiniZincVisitor)
				return ((MiniZincVisitor<? extends T>) visitor).visitTypeInstSynItem(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final TypeInstSynItemContext typeInstSynItem() throws RecognitionException {
		TypeInstSynItemContext _localctx = new TypeInstSynItemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeInstSynItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(210);
				match(T__4);
				setState(211);
				ident();
				setState(212);
				annotations();
				setState(213);
				match(EQ);
				setState(214);
				tiExpr();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignItemContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class, 0);
		}

		public TerminalNode EQ() {
			return getToken(MiniZincParser.EQ, 0);
		}

		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}

		public AssignItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_assignItem;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).enterAssignItem(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).exitAssignItem(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MiniZincVisitor)
				return ((MiniZincVisitor<? extends T>) visitor).visitAssignItem(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final AssignItemContext assignItem() throws RecognitionException {
		AssignItemContext _localctx = new AssignItemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(216);
				ident();
				setState(217);
				match(EQ);
				setState(218);
				expr();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstraintItemContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}

		public AnnotationsContext annotations() {
			return getRuleContext(AnnotationsContext.class, 0);
		}

		public ConstraintItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_constraintItem;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).enterConstraintItem(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof MiniZincListener)
				((MiniZincListener) listener).exitConstraintItem(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof MiniZincVisitor)
				return ((MiniZincVisitor<? extends T>) visitor).visitConstraintItem(this);
			else
				return visitor.visitChildren(this);
		}
	}
